# QPanda-2

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Config.xml  Doxyfile  FindQPANDA.cmake  Makefile  MetadataConfig.xml  QPANDAConfigVersion.cmake.in  QPanda-2.0.Windows.sln  QPanda-2.0.sln  QPandaConfig.json  QPandaConfig.xml  QuantumCloudConfig.xml  README(CN).md  README(EN).md  README.md  READNE(CN).md  azure-pipelines.yml  build.sh  conda_requirements.txt  config.h  config.h.in  configVersion.h.in  qpanda-config.in  testIBMQ.xml
Applications/: CMakeLists.txt
Applications/B_V_Algorithm/: BernsteinVaziraniAlgorithm.cpp  CMakeLists.txt
Applications/ChemiQCalc/: CMakeLists.txt  ChemiQCalc.cpp  script.py
Applications/DJ_Algorithm/: CMakeLists.txt  DJ_Algorithm.cpp
Applications/Grover_Algorithm/: CMakeLists.txt  Grover_Algorithm.cpp
Applications/HHL_Algorithm/: BasicFunctionByOrigin.cpp  BasicFunctionByOrigin.h  CMakeLists.txt  HHL_Algorithm.cpp  SparseQMatrix.h  SparseQVector.h  preconditionByOrigin.cpp  preconditionByOrigin.h
Applications/NodeSort/: CMakeLists.txt  NodeSort.cpp
Applications/OptimizerTest/: CMakeLists.txt  Optimizer.cpp
Applications/OriginIRToQProg/: CMakeLists.txt  OriginIRToQProg.cpp
Applications/PennyGame_Algorithm/: CMakeLists.txt  CoinFlipGame.cpp
Applications/QAOAExample/: CMakeLists.txt  QAOAExample.cpp
Applications/QApplication/: CMakeLists.txt
Applications/QPEAlgorithm/: CMakeLists.txt  QPE_Algorithm.cpp
Applications/QSpringRank/: CMakeLists.txt  QSpringRank.cpp
Applications/QuantumWalk/: CMakeLists.txt  QuantumWalk.cpp
Applications/SimonAlgorithm/: CMakeLists.txt  SimonAlgorithm.cpp
ChemiQ/: CMakeLists.txt  ChemiQ.cpp  ChemiQIFC.cpp  ChemiqUtil.cpp  Psi4Wrapper.cpp
Components/: CMakeLists.txt
Components/ChemiQ/: ChemiqUtil.cpp  Psi4Wrapper.cpp
Components/HamiltonianSimulation/: HamiltonianSimulation.cpp
Components/MaxCutProblemGenerator/: MaxCutProblemGenerator.cpp
Components/NodeSortProblemGenerator/: NodeSortProblemGenerator.cpp
Components/Operator/: PauliOperator.cpp
Components/Optimizer/: AbstractOptimizer.cpp  OptimizerFactory.cpp  OriginBasicOptNL.cpp  OriginCOBYLA.cpp  OriginGradient.cpp  OriginLBFGSB.cpp  OriginNelderMead.cpp  OriginPowell.cpp  OriginSLSQP.cpp
Core/: CMakeLists.txt  Core.cpp  QPanda.cpp  QPanda.h
Core/Debugger/: Debug.cpp  QPUDebugger.cpp
Core/Module/: Ansatz.cpp  Module.cpp
Core/QuantumCircuit/: CExprFactory.cpp  CExprFactory.h  ClassicalConditionInterface.cpp  ClassicalConditionInterface.h  ClassicalProgam.cpp  ClassicalProgam.h  ClassicalProgram.cpp  ControlFlow.cpp  ControlFlow.h  OriginClassicalExpression.cpp  OriginClassicalExpression.h  QCircuit.cpp  QCircuit.h  QGate.cpp  QGate.h  QGlobalVariable.h  QNode.cpp  QNode.h  QNodeDeepCopy.cpp  QNodeManager.cpp  QProgram.cpp  QProgram.h  QReset.cpp  QuantumGate.cpp  QuantumGate.h  QuantumMeasure.cpp  QuantumMeasure.h
Core/QuantumCloud/: QCloudLog.cpp  QCloudMachine.cpp  QCloudMachineImp.cpp  QCloudService.cpp  QCurl.cpp  QRabbit.cpp  Signature.cpp
Core/QuantumMachine/: CBitFactory.cpp  CBitFactory.h  CMemFactory.cpp  CMemFactory.h  Factory.h  FullAmplitudeQVM.cpp  NoiseQVM.cpp  OriginClassicalSystem.cpp  OriginPhysicalQubit.cpp  OriginQMachineStatus.cpp  OriginQResult.cpp  OriginQVM.cpp  OriginQuantumMachine.cpp  OriginQuantumMachine.h  OriginQubit.cpp  OriginQubitPool.cpp  PartialAmplitudeQVM.cpp  PhysicalQubitFactory.cpp  PhysicalQubitFactory.h  QCloudMachine.cpp  QProgCheck.cpp  QProgExecution.cpp  QResultFactory.cpp  QResultFactory.h  QVec.h  QuantumCloudHTTP.cpp  QuantumCloudHTTP.h  QuantumMachineFactory.cpp  QuantumMachineFactory.h  QuantumMachineInterface.cpp  QuantumMachineInterface.h  QubitFactory.cpp  QubitFactory.h  QubitPoolFactory.cpp  QubitPoolFactory.h  QubitReference.h  SingleAmplitudeQVM.cpp
Core/QuantumNoise/: NoiseModelV2.cpp  OriginNoise.cpp  QNoise.cpp
Core/Utilities/: CSVIostream.cpp  CSVIostream.h  ComplexMatrix.h  ComplexVector.h  ConfigMap.cpp  ConfigMap.h  GraphDijkstra.cpp  GraphDijkstra.h  MetadataValidity.cpp  MetadataValidity.h  OriginCollection.h  QCircuitInfo.cpp  QNodeDeepCopy.cpp  QPandaNamespace.h  QStatMatrix.cpp  QStatMatrix.h  QString.cpp  QString.h  QuantumMetadata.cpp  QuantumMetadata.h  TranformQGateTypeStringAndEnum.cpp  TranformQGateTypeStringAndEnum.h  Traversal.cpp  Utilities.cpp  XMLConfigParam.cpp  XMLConfigParam.h
Core/Variational/: Optimizer.cpp  expression.cpp  utils.cpp  var.cpp
Core/VirtualQuantumProcessor/: AbstractFullAmplitudeEngine.cpp  CPUImplQPU.cpp  CPUImplQPU.h  CPUImplQPUSingleThread.cpp  CPUImplQPUSingleThread.h  CPUQuantumGates.cpp  CPUQuantumGates.h  CPUQuantumGatesSingleThread.cpp  CPUQuantumGatesSingleThread.h  CPUSupportAvx2.cpp  GPUImplQPU.cpp  GPUImplQPU.h  GPUQuantumGates.cpp  GPUQuantumGates.h  QPUImpl.cpp  QPUImpl.h  QuantumGateParameter.h  QuantumGates.cpp  QuantumGates.h
QAlg/: CMakeLists.txt  DataStruct.h
QAlg/AmplitudeEncode/: AmplitudeEncode.cpp
QAlg/ArithmeticUnit/: Adder.cpp  ArithmeticUnit.cpp  ArithmeticUnit_V2.cpp
QAlg/B_V_Algorithm/: BernsteinVaziraniAlgorithm.cpp
QAlg/Base_QCircuit/: SzegedyWalk.cpp
QAlg/ChemiQ/: ChemiQ.cpp  ChemiQIFC.cpp
QAlg/DJ_Algorithm/: DJ_Algorithm.cpp
QAlg/Encode/: Encode.cpp
QAlg/Error_mitigation/: Correction.cpp  Sample.cpp
QAlg/Grover/: GroverAlgorithm.cpp  GroverFrame.cpp  QuantumWalkGroverAlg.cpp
QAlg/Grover_Algorithm/: Grover_Algorithm.cpp
QAlg/HHL/: HHL.cpp
QAlg/IQAE/: IterativeQuantumAmplitudeEstimation.cpp
QAlg/QAOA/: QAOA.cpp
QAlg/QARM/: QARMAlgorithm.cpp
QAlg/QITE/: QITE.cpp
QPanda-2.0.Algorithm/: CMakeLists.txt  QAlgorithm.h  QPanda-2.0.Algorithm.vcxproj  QPanda-2.0.Algorithm.vcxproj.filters
QPanda-2.0.Core/: CMakeLists.txt  QPanda-2.0.Core.vcxproj.filters  QPanda.h  QuantumVirtualMachine.rar
Variational/: CMakeLists.txt  Optimizer.cpp  Optimizer.h  VarFermionOperator.h  VarPauliOperator.h  expression.cpp  expression.h  utils.cpp  utils.h  var.cpp  var.h
pyQPandaCpp/: CMakeLists.txt
test/: CMakeLists.txt
(+1378 files in other folders)
