cmake_minimum_required(VERSION 3.1)
add_subdirectory(B_V_Algorithm)
add_subdirectory(DJ_Algorithm)
add_subdirectory(Grover_Algorithm)
add_subdirectory(PennyGame_Algorithm)
add_subdirectory(QPEAlgorithm)
add_subdirectory(QuantumWalk)
add_subdirectory(SimonAlgorithm)
add_subdirectory(QAOAExample)
add_subdirectory(OptimizerTest)

if (USE_EXTENSION)
    add_subdirectory(NodeSort)
    add_subdirectory(HHL_Algorithm)
endif(USE_EXTENSION)

if(USE_CHEMIQ)
    add_subdirectory(ChemiQCalc)
endif(USE_CHEMIQ)
